[package]
name = "data_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_storage = "*"
azure_core = "*"
azure_storage_blobs = "*"
reqwest = "*"
futures = "*"
polars = { version = "0.26.1", features = ["docs", "csv-file", "temporal", "fmt", "dtype-slim", "polars-io", "docs-selection", "dtype-full", "performant", "serde-lazy", "parquet", "lazy", "private", "ipc", "mode", "object", "polars-lazy"] }
tokio = { version = "*", features = ["full"] }
bytes= "*"
rand = "0.8.5"
regex = "1.7.1"
